<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.opengeo</groupId>
  <artifactId>rogue-geoserver</artifactId>
  <packaging>jar</packaging>
  <version>2.3</version>
  <name>ROGUE Geoserver</name>
  <repositories>
    <repository>
      <id>opengeo</id>
      <name>OpenGeo Maven Repository</name>
      <url>http://repo.opengeo.org/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>org.mapfish</id>
      <url>http://dev.mapfish.org/maven/repository</url>
    </repository>
    <repository>
      <id>osgeo</id>
      <url>http://download.osgeo.org/webdav/geotools</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>rest</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.web</groupId>
      <artifactId>web-security</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.community</groupId>
      <artifactId>printing</artifactId>
      <version>${geoserver.version}</version>
      <exclusions>
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xercesImpl</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>restconfig</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>web-wps</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>xerces</groupId>
      <artifactId>xercesImpl</artifactId>
      <version>2.7.1</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>excel</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <!--dependency>
      <groupId>org.geoserver.community</groupId>
      <artifactId>ftp</artifactId>
      <version>${geoserver.version}</version>
    </dependency-->
    <dependency>
      <groupId>org.geoserver.web</groupId>
      <artifactId>web-app</artifactId>
      <type>jar</type>
      <version>${geoserver.version}</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>net.sf.json-lib</groupId>
          <artifactId>json-lib</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>3.1</version>
    </dependency>
    <dependency>
      <groupId>org.opengeo.geoserver</groupId>
      <artifactId>importer</artifactId>
      <version>${geoserver.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.opengeo.data.csv</groupId>
      <artifactId>csv</artifactId>
      <version>${geoserver.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.opengeo.geoserver</groupId>
      <artifactId>printng</artifactId>
      <version>${geoserver.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-shapefile</artifactId>
      <version>${geotools.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>13.0.1</version>
    </dependency>
    <!-- GeoJSON module dependencies -->
    <dependency>
      <groupId>net.sf.json-lib</groupId>
      <artifactId>json-lib</artifactId>
      <version>2.2.3</version>
      <classifier>jdk15</classifier>
    </dependency>
    <!-- This dependency is temporary in order to hold a fake process while developing the REST process wrapper -->
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-process</artifactId>
      <version>${geotools.version}</version>
    </dependency>
    <!-- ROGUE Extras
    
    + geogit (should build against the nightlies)
    ✓ suite importer (including the required restlet jar and latest geogit changes)
    ✓ geoservices rest (in geoserver-exts)
    ✓ kml (in geotools)
    ✓ geoserver-geonode-ext
    ✓ mapfish (think that the geoserver-geonode-ext builds this)
    ✓ wps (from suite?)
    ✓ printng (from geoserver-exts)
    + gdal/ogr
    -->
    <dependency>
      <groupId>org.geotools.xsd</groupId>
      <artifactId>gt-xsd-kml</artifactId>
      <version>${geotools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.opengeo.geoserver</groupId>
      <artifactId>gsr</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.opengeo</groupId>
      <artifactId>geonode-geoserver-ext</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>ogr</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-ogr-core</artifactId>
      <version>${geotools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-ogr-jni</artifactId>
      <version>${geotools.version}</version>
    </dependency>
    <!-- GeoGit -->
    <dependency>
      <groupId>org.geogit</groupId>
      <artifactId>geogit-web-api</artifactId>
      <version>${geogit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geogit</groupId>
      <artifactId>geogit-geotools</artifactId>
      <version>${geogit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geogit</groupId>
      <artifactId>geogit-geoserver</artifactId>
      <version>${geogit.version}</version>
    </dependency>
    <!--  test dependencies  -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.10</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>main</artifactId>
      <scope>test</scope>
      <classifier>tests</classifier>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.web</groupId>
      <artifactId>web-core</artifactId>
      <scope>test</scope>
      <classifier>tests</classifier>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>com.mockrunner</groupId>
      <artifactId>mockrunner</artifactId>
      <version>0.3.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-sample-data</artifactId>
      <version>${geotools.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>xmlunit</groupId>
      <artifactId>xmlunit</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>2.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymockclassextension</artifactId>
      <version>2.3</version>
      <scope>test</scope>
    </dependency>
    
    <!-- Jetty runner dependencies -->
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty-naming</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty-plus</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <properties>
    <geotools.version>9-SNAPSHOT</geotools.version>
    <geoserver.version>2.3-SNAPSHOT</geoserver.version>
    <jetty.version>6.1.8</jetty.version>
    <geogit.version>0.3-SNAPSHOT</geogit.version>
    <maven.test.search.classdir>true</maven.test.search.classdir>
  </properties>
  <profiles></profiles>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.5</source>
          <target>1.5</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.mortbay.jetty</groupId>
        <artifactId>maven-jetty-plugin</artifactId>
        <version>6.1.10</version>
        <configuration>
          <stopPort>8890</stopPort>
          <stopKey>geonode-stop</stopKey>
          <scanIntervalSeconds>30</scanIntervalSeconds>
          <contextPath>/geoserver</contextPath>
          
          <webApp>${project.build.directory}/geoserver</webApp>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <warName>geoserver</warName>
          <webappDirectory>${project.build.directory}/geoserver</webappDirectory>
          <packagingExcludes>**/data/</packagingExcludes>
          <packagingExcludes>**/web-app*.jar</packagingExcludes>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>war</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
